# murmurarium

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
src/murmurarium/: __init__.py  __main__.py  server.py  simulation.py
tests/: test_simulation.py
web/: app.js  index.html  styles.css
