[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-switchboard"
version = "0.3.0"
description = "A strange signal console powered by Python and JavaScript."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sebastian Forbes" }]
keywords = ["generative-audio", "canvas", "python", "javascript", "signal"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: JavaScript",
  "License :: OSI Approved :: MIT License",
  "Topic :: Artistic Software",
]

[project.scripts]
spectral-switchboard = "murmurarium.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
murmurarium = []
